SignInApp/static/css/main.css
.usit-icon {
	display: flex;
	justify-content: center;
	padding-top: 50px;
}

.eid-prompt {
	display: flex;
	justify-content: center;
	margin-top: -20px;
	color: white;
	font-size: 30px;
}

.eid-inputs {
	display: flex;
	align-items: center;
	flex-direction: column;
}

.info-inputs {
	display: flex;
	align-items: center;
	flex-direction: column;
}

.eid-input {
	border: 0px;
	border-bottom: 1px solid;
	max-width: 450px;
}

.info-input {
	border: 0px;
	border-bottom: 1px solid;
	max-width: 450px;
}

.eid-submit {
	max-width: 250px;
	border: 0px;
	font-size: 20px;
}

input[type="submit"]:hover {
    border: 1px solid #42A679;
    color: #42A679;
}

input[type="text"] {
	text-align: center;
	font-size: 20px;
}

input[type="text"]:focus {
	border-bottom: 1px solid #42A679;
}

.attendance-result {
	display: flex;
	flex-direction: column;
	padding-left: 30px;
	padding-right: 30px;
	text-align: center;
	align-items: center;
	color: white;
	font-size: 30px;
}

.attendance-stats {
	text-align: center;
	padding-top: 20px;
	display: flex;
	flex-direction: column;
	align-items: center;
	color: white;
	font-size: 18px;
}

.attendance-stat {
	margin-top: 2px;
	margin-bottom: 2px;
}

